src/test/deca/syntax/invalid/improvided/assign_float_big.deca

{
	int a = 1000000000000000006054324056765403245034567654324567865434567654567876545676;
}
